--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ header {
 }
 
 h1 {
-    display: flex;
+    display: block;
     align-items: center;
     justify-content: center;
     font-size: 3.5rem;
@@ -56,9 +56,8 @@ h1 {
 }
 
 .off {
-    visible: hidden;
     color: #fff;
-    font-size: 2rem;
+    font-size: 1.3rem;
     font-weight: 700;
     margin-left: 2rem;
     padding: 0.5rem 1rem;
