--- a/css/style.css
+++ b/css/style.css
@@ -34,16 +34,17 @@ h1 {
     width: 100%;
     height: 100vh;
     display: flex;
+    flex-direction:column;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    gap: 20px;
 }
 
 .on {
     color: #fff;
     font-size: medium;
     font-weight: 700;
-    margin-left: 2rem;
     padding: 0.5rem 1rem;
     border: none;
     border-radius: 4px;
@@ -51,15 +52,14 @@ h1 {
 }
 
 .on:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
     background-color: #4ea4dd;
 }
 
 .off {
     color: #fff;
-    font-size: 1.3rem;
+    font-size: 1rem;
     font-weight: 700;
-    margin-left: 2rem;
     padding: 0.5rem 1rem;
     border: none;
     border-radius: 4px;
@@ -67,7 +67,7 @@ h1 {
 }
 
 .off:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
     background-color: #4ea4dd;
 }
 
